--- a/src/app/components/state-overview/state-overview.component.html
+++ b/src/app/components/state-overview/state-overview.component.html
@@ -8,21 +8,38 @@
         </div>
       </div>
     </div> -->
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary overflow-hidden">
-        <div class="row ">
-          <div class="col text-center p-2">État</div>
-          <div class="col text-center bg-{{state?.state?'success':'danger'}} p-2">{{state?.state?'Actif':'Stoppé'}}</div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> 
+        <div class="border border-secondary overflow-hidden">
+          <div class="row">
+            <div class="col text-center p-2">Auth?</div>
+            <div class="col text-center bg-{{!state?.basicAuth?'secondary':'primary'}} p-2">{{!state?.basicAuth?'Anon':'Admin'}}</div>
+          </div>
         </div>
       </div>
-    </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary p-2">test</div> </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary p-2">test</div> </div>
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary p-2">test</div> </div>
-      <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-4 p-2  d-grid gap-2"> <div class="border border-secondary p-2">test</div> </div>
+
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> 
+        <div class="border border-secondary overflow-hidden">
+          <div class="row ">
+            <div class="col text-center p-2">État</div>
+            <div class="col text-center bg-{{state?.state?'success':'danger'}} p-2">{{state?.state?'Actif':'Stoppé'}}</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> 
+        <div class="border border-secondary p-2">
+          <span *ngIf="state">
+            ({{state?.last?.index}}) {{state?.crawled?.length}} / {{state?.all?.length}}
+          </span>
+          
+        </div>
+      </div>
+      
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary p-2">Catégorie ID {{state?.last?.id}}</div></div>
+      <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-4 p-2  d-grid gap-2"> <div class="border border-secondary p-2">{{(state?.last?.url!=='')?state?.last?.url:'empty'}}</div></div>
     </div>
     <div class="progress">
 
-      <div *ngIf="state" class="progress-bar stripped  {{state?.state?'bg-primary':'bg-warning'}} progress-bar-striped {{state?.state?'progress-bar-animated':''}}" role="progressbar" [style]="{width: percent+'%'}" [attr.aria-valuenow]="percent" aria-valuemin="0" aria-valuemax="100"></div>
+      <div *ngIf="state" class="progress-bar stripped  {{state.state?'bg-primary':'bg-warning'}} progress-bar-striped {{state.state?'progress-bar-animated':''}}" role="progressbar" [style]="{width: (this.state.last.index * 100 / this.state.all.length)+'%'}" [attr.aria-valuenow]="(this.state.last.index * 100 / this.state.all.length)" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
 </div>
