--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,7 @@
   </div>
 </div>
 <!-- buttons -->
-<div class="container-fluid container-actions">
+<div *ngIf="state?.basicAuth" class="container-fluid container-actions">
   <div class="row g-2 p-2">
     <div *ngFor="let action of actions" class="col-12 col-lg-6">
       <app-action-card
@@ -67,47 +67,13 @@
         (onState)="updateState($event)"
       ></app-action-card>
     </div>
-    <!-- <div class="col-12 col-lg-6">
-      <div class="p-3 border bg-light">
-        <div class="card-body d-grid gap-2">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <button class="btn btn-success  text-center" type="button">Start</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-lg-6">
-      <div class="p-3 border bg-light">
-        <div class="card-body d-grid gap-2">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <button class="btn btn-danger  text-center" type="button">Start</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-lg-6">
-      <div class="p-3 border bg-light">
-        <div class="card-body d-grid gap-2">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <button class="btn btn-info  text-center" type="button">Start</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-lg-6">
-      <div class="p-3 border bg-light">
-        <div class="card-body d-grid gap-2">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <button class="btn btn-warning  text-center" type="button">Start</button>
-        </div>
-      </div>
-    </div> -->
   </div>
+</div>
+<div *ngIf="!state?.basicAuth" class="container-fluid container-actions">
+  <app-auth-form
+    [credentials]="credentials"
+    (onConnecte)="generateBasicAuth()"
+    ></app-auth-form>
 </div>
 
 
@@ -116,7 +82,7 @@
   <div class="row">
     <div class="col">
       <div class="terminal">
-        <pre >{{terminal.value}}</pre>
+        <pre  id="preterm" #preterm>{{terminal.value}}</pre>
     </div>
     </div>
   </div>
@@ -144,7 +110,7 @@
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <div class="mb-3">
+    <!-- <div class="mb-3">
       <label for="inputLogin" class="form-label">Login</label>
       <input type="text" class="form-control" id="inputLogin" [(ngModel)]="credentials.username" name="username">
     </div>
@@ -152,7 +118,16 @@
       <label for="inputPassword" class="form-label">Password</label>
       <input type="password" class="form-control" id="inputPassword" [(ngModel)]="credentials.password" name="password">
     </div>
-    <button class="btn btn-secondary" (click)="generateBasicAuth()">connection</button>
+    <button class="btn btn-secondary" (click)="generateBasicAuth()">connection</button> -->
+    <app-auth-form
+    [credentials]="credentials"
+    (onConnecte)="generateBasicAuth()"
+    ></app-auth-form>
+    <button *ngIf="state?.basicAuth"
+    (click)="unAuth()"
+     class="btn btn-warning"
+     >Déconnexion
+    </button>
   </div>
 
 </div>
