--- a/src/less/page.less
+++ b/src/less/page.less
@@ -2,6 +2,13 @@ html,
 body{
   height: 100%;
 }
-app-root {
+.app-root {
   margin-bottom: 3rem;
+}
+
+.app-root {
+  margin-top: 5rem;
+  & > div.container-fluid:first-of-type {
+    margin-top: .5rem;
+  }
 }
