--- a/src/app/components/state-overview/state-overview.component.html
+++ b/src/app/components/state-overview/state-overview.component.html
@@ -1,44 +1,38 @@
 <div class="p-3 border bg-light">
   <div class="card-body d-grid gap-2">
     <div class="row g-2">
-     <!--  <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary p-2">
-        <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" id="flexSwitchCheckCheckedDisabled" [checked]="state?.state" disabled>
-          <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">État {{state?.state?'Actif':'Stoppé'}}</label>
-        </div>
-      </div>
-    </div> -->
+
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2">
-        <div class="border border-secondary overflow-hidden fw-bold inner-shadow">
+        <div class="border border-secondary overflow-hidden fw-bold inner-shadow bg-white">
           <div class="row ">
             <div class="col text-center p-2 ">Auth?</div>
-            <div class="col text-center bg-{{!state?.basicAuth?'secondary':'primary'}} p-2">{{!state?.basicAuth?'Anon':'Admin'}}</div>
+            <div class="col text-center bg-{{!state?.basicAuth?'secondary text-white':'primary text-white'}} p-2">{{!state?.basicAuth?'Anon':'Admin'}}</div>
           </div>
         </div>
       </div>
 
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2">
-        <div class="border border-secondary overflow-hidden fw-bold inner-shadow">
+        <div class="border border-secondary overflow-hidden fw-bold inner-shadow bg-white">
           <div class="row ">
             <div class="col text-center p-2">État</div>
-            <div class="col text-center bg-{{state?.state?'success':'danger'}} p-2">{{state?.state?'Actif':'Stoppé'}}</div>
+            <div class="col text-center bg-{{state?.state?'success text-white':'danger text-white'}} p-2">{{state?.state?'Actif':'Stoppé'}}</div>
           </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2">
-        <div class="border border-secondary p-2 fw-bold inner-shadow">
+        <div class="border border-secondary p-2 fw-bold inner-shadow bg-white">
           <span *ngIf="state">
-            ({{state?.last?.index}}) {{state?.crawled?.length}} / {{state?.all?.length}}
+            ({{state?.last?.index}}) {{state?.crawled?.length}} / ({{state?.length}}) {{state?.all?.length}}
           </span>
         </div>
       </div>
 
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary p-2 fw-bold inner-shadow">Catégorie ID {{state?.last?.id}}</div></div>
-      <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-4 p-2  d-grid gap-2"> <div class="border border-secondary p-2 d-flex inner-shadow"><span class="ellipsed font-monospace text-muted">{{(state?.last?.url!=='')?state?.last?.url:'empty'}}</span></div></div>
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 p-2  d-grid gap-2"> <div class="border border-secondary p-2 fw-bold inner-shadow bg-white">Catégorie ID {{state?.last?.id}}</div></div>
+      <div class="col-12 col-sm-12 col-md-8 col-lg-6 col-xl-4 p-2  d-grid gap-2"> <div class="border border-secondary p-2 d-flex inner-shadow bg-white"><span class="text-url ellipsed font-monospace text-muted">{{(state?.last?.url!=='')?state?.last?.url:'empty'}}</span></div></div>
     </div>
     <div class="progress">
-
-      <div *ngIf="state" class="progress-bar stripped  {{state.state?'bg-primary':'bg-warning'}} progress-bar-striped {{state.state?'progress-bar-animated':''}}" role="progressbar" [style]="{width: (this.state.last.index * 100 / this.state.all.length)+'%'}" [attr.aria-valuenow]="(this.state.last.index * 100 / this.state.all.length)" aria-valuemin="0" aria-valuemax="100"></div>
+      <div *ngIf="state" class="progress-bar stripped  {{state.state?'bg-primary':'bg-warning'}} progress-bar-striped {{state.state?'progress-bar-animated':''}}" role="progressbar" [style]="{width: (this.state.last.index * 100 / this.state.all.length)+'%'}" [attr.aria-valuenow]="(this.state.last.index * 100 / this.state.all.length)" aria-valuemin="0" aria-valuemax="100" title="good urls [200]"></div>
+      <div *ngIf="state && this.state.all.length != this.state.length" class="progress-bar stripped  {{state.state?'bg-warning':'bg-danger'}} progress-bar-striped {{state.state?'progress-bar-animated':''}} justify-content-end" role="progressbar" [style]="{width: (this.state.length * 100 / this.state.all.length)+'%'}" [attr.aria-valuenow]="(this.state.length * 100 / this.state.all.length)" aria-valuemin="0" aria-valuemax="100"  title="bad urls [400]"></div>
     </div>
   </div>
 </div>
