--- a/src/app/components/state-overview/state-overview.component.less
+++ b/src/app/components/state-overview/state-overview.component.less
@@ -12,7 +12,14 @@
 .inner-shadow {
   -webkit-box-shadow: inset 2px 2px 0px 1px #00000033;
   box-shadow: inset 2px 2px 0px 1px #00000033;
+
   & * {
     mix-blend-mode: multiply;
   }
+}
+
+.text-url{
+  @media (max-width: 991px) {
+    max-width: 260px;
+  }  
 }
